# stacathome

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  asf_dl.ipynb  build_documentation.sh  ci_requirements.txt  env_complete.yaml  env_stacathome.yaml  environment.yaml  minicuber_env.yaml  mwe.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_cloudmask.ipynb  walltowall.ipynb
.github/actions/setup_environment/: action.yml
.github/workflows/: build_and_upload_wheel.yml  run_linting.yml  run_tests.yml
doc/: conf.py  index.rst
stacathome/: __init__.py  africa_cubes.py  asset_specs.py  asset_specs_class.py  base.py  cloudmask.py  combine.py  create_global_buckets.py  cuber.py  download.py  esa_wc_utils.py  generic_utils.py  geo.py  plot.py  processors.py  providers.py  registry.py  request.py  requests.py  sample_africa_uniform.py  sample_buckets.py  sentinel_2_utils.py  sentinel_3_utils.py  setup.py  spatialgrid.py  stac.py  timegrid.py  utils.py  walltowall.py  ymca.py
stacathome/auth/: handler.py
stacathome/metadata/: __init__.py  base.py
stacathome/metadata/cdse/: MD_sentinel_2_l2a.py  __init__.py
stacathome/metadata/earthaccess/: MD_ECO_L2T_LSTE.py  __init__.py  earthaccess_datacollections.csv
stacathome/metadata/planetary/: MD_3dep_lidar_classification.py  MD_3dep_lidar_copc.py  MD_3dep_lidar_dtm.py  MD_3dep_lidar_dtm_native.py  MD_3dep_lidar_hag.py  MD_3dep_lidar_intensity.py  MD_3dep_lidar_pointsourceid.py  MD_3dep_lidar_returns.py  MD_3dep_seamless.py  MD_alos_dem.py  MD_alos_fnf_mosaic.py  MD_alos_palsar_mosaic.py  MD_aster_l1t.py  MD_chesapeake_lc_13.py  MD_chesapeake_lc_7.py  MD_chesapeake_lu.py  MD_chloris_biomass.py  MD_cil_gdpcir_cc0.py  MD_cil_gdpcir_cc_by.py  MD_cil_gdpcir_cc_by_sa.py  MD_cop_dem_glo_30.py  MD_cop_dem_glo_90.py  MD_deltares_floods.py  MD_deltares_water_availability.py  MD_drcog_lulc.py  MD_eclipse.py  MD_ecmwf_forecast.py  MD_era5_pds.py  MD_esa_cci_lc.py  MD_esa_cci_lc_netcdf.py  MD_esa_worldcover.py  MD_fia.py  MD_fws_nwi.py  MD_gap.py  MD_gbif.py  MD_gnatsgo_rasters.py  MD_gnatsgo_tables.py  MD_goes_cmi.py  MD_goes_glm.py  MD_hgb.py  (+73 more)
stacathome/processors/: __init__.py  base.py  common.py  ecostress.py  landsat.py  modis.py  sentinel1.py  sentinel2.py  sentinel2_rewrite.py  sentinel3.py  viirs.py  worldcover.py
stacathome/providers/: __init__.py  asf.py  common.py  crawler.py  earthaccess.py  eumdac.py  stac.py
stacathome/redo_classes/: base.py  generic_utils.py  processors.py  providers.py  registry.py  requests.py
stacathome/resources/tests/: s2_l2a_items.json
stacathome/tools/: download.py  prefetch_metadata.py
stacathome/ymca/: temporal_resampling_scl.py  yet_mini_cube_another_there_is.py
test/: test_asf_provider.py  test_auth_handler.py  test_geo.py  test_metadata.py  test_providers.py  test_s2_l2a_integration.py  test_s2_l2a_processor.py  test_stac.py  test_stac_provider.py
test/processors/: test_registry.py
test/processors/earthaccess/: test_eco_l2t_lste.py  test_s1_opera_l2_rtc.py
test/processors/planetary/sentinel_1_rtc/: test_integration.py
test/processors/planetary/sentinel_2_l2a/: aux_map_view.py  test_integration.py  test_processor.py
test/providers/: test_asf.py  test_crawler.py  test_earthaccess.py  test_eumdac.py  test_planetary.py  test_registry.py
usecases/: eocube.ipynb  mwe.ipynb  p3_parallel_s2_dl.py  s2_dpabon.py  s3_dl.py  s3_jake.ipynb  tester.py  vci.py  vci_eval.ipynb
