[metadata]
name = stacathome
version = attr: stacathome.__version__
author = Markus Zehner
author_email = mzehner@bgc-jena.mpg.de
url = 
description = Stac download and processing for the WeGen project
long_description = file: README.md
long_description_content_type = text/markdown
keywords = example, setuptools
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
install_requires = file: requirements.txt
